[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/bgfruitninja.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/inputproc.gd" type="Script" id=3]
[ext_resource path="res://assets/hud_vidas.png" type="Texture" id=4]
[ext_resource path="res://assets/font150.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/bomb100.png" type="Texture" id=6]

[sub_resource type="GDScript" id=1]

resource/name = "gameover"
script/source = "extends Control

var pode = false

func _ready():
	set_process_input(true)
	
func _input(event):
	if event.type == InputEvent.SCREEN_TOUCH and pode:
		get_tree().reload_current_scene()

func start():
	show()
	get_node(\"AnimationGameOver\").play(\"GameOver\")
	get_node(\"Timer\").start()

func _on_Timer_timeout():
	pode = true
#	get_node(\"TryAgain\").show()
	get_node(\"AnimationTryAgain\").play(\"TryAgain\")
	
"

[sub_resource type="Animation" id=2]

resource/name = "GameOver"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TryAgain:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray(  ),
"transitions": FloatArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=3]

resource/name = "TryAgain"
length = 3.0
loop = false
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("TryAgain:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.2, 2, 3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 2 )
centered = false

[node name="Fruits" type="Node2D" parent="."]

[node name="Generator" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="InputProc" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 3 )

[node name="Interval" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Limit" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="TextureFrame" type="TextureFrame" parent="Control"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 301.0
margin/bottom = 326.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 156.0
margin/top = 14.0
margin/right = 235.0
margin/bottom = 144.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.333333, 0.643137, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bomb1" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1170.0
margin/top = 15.0
margin/right = 1270.0
margin/bottom = 115.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Bomb2" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1070.0
margin/top = 15.0
margin/right = 1170.0
margin/bottom = 115.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Bomb3" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 970.0
margin/top = 15.0
margin/right = 1070.0
margin/bottom = 115.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="GameOverScreen" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = SubResource( 1 )

[node name="GameOver" type="Label" parent="GameOverScreen"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 257.0
margin/top = 230.0
margin/right = 1028.0
margin/bottom = 360.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.333333, 0.643137, 0, 1 )
text = "GAME OVER!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TryAgain" type="Label" parent="GameOverScreen"]

visibility/opacity = 0.0
rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 258.0
margin/top = 367.0
margin/right = 2856.0
margin/bottom = 497.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.333333, 0.639216, 0, 1 )
text = "TOQUE NA TELA PARA JOGAR NOVAMENTE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationGameOver" type="AnimationPlayer" parent="GameOverScreen"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/GameOver = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AnimationTryAgain" type="AnimationPlayer" parent="GameOverScreen"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/TryAgain = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="GameOverScreen"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[connection signal="timeout" from="Generator" to="." method="_on_Generator_timeout"]

[connection signal="timeout" from="InputProc/Interval" to="InputProc" method="_on_Interval_timeout"]

[connection signal="timeout" from="InputProc/Limit" to="InputProc" method="_on_Limit_timeout"]

[connection signal="timeout" from="GameOverScreen/Timer" to="GameOverScreen" method="_on_Timer_timeout"]


